# finance

./: README.md  Untitled.ipynb  pyproject.toml
finance/core/: functions.py
finance/jupyter-notebooks/: data.ipynb
tests/: test_finance.py
